src/styles/global.css
@font-face {
  font-family: Inter;
  src: url("../assets/fonts/Inter-VariableFont_opsz\,wght.ttf");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: Inter;
  src: url("../assets/fonts/Inter-Italic-VariableFont_opsz\,wght.ttf");
  font-weight: 100 900;
  font-style: italic;
}

:root {
  --text: 0, 0%, 80%;
  --text-primary: 0, 0%, 100%;
  --text-primary-dark: 0, 0%, 100%;
  --text-secondary: 220, 60%, 50%;
  --text-dark: 0, 0%, 70%;
  --background: 230, 15%, 9%;
  --background-yellow: 35, 30%, 30%;
  --background-blue: 220, 50%, 30%;
  --primary: 220, 70%, 60%;
  --secondary: 220, 100%, 7%;
  --accent: 220, 100%, 60%;

  --card-border-highlight: 50, 100%, 90%;
  --card-border: 0, 0%, 35%; 
  --card-shadow: 0 1px 1px rgba(0, 0, 0, 0.25),
                  0 2px 2px rgba(0, 0, 0, 0.25),
                  0 4px 4px rgba(0, 0, 0, 0.25),
                  0 8px 8px rgba(0, 0, 0, 0.25),
                  0 16px 16px rgba(0, 0, 0, 0.25),
                  0 32px 32px rgba(0, 0, 0, 0.15),
                  0 64px 64px rgba(0, 0, 0, 0.15);

  --section-padding: 2rem;
}

body {
  position: relative;
  font-family: "Inter";
  background: hsl(var(--background));
  color: hsl(var(--text));
  min-height: 100vh;
}

.section-heading {
  font-size: 2.2rem;
  font-weight: 800;
}

.section-description {
  max-width: 75ch;
  text-align: center;
  font-size: 1.2rem;
}

#hero {
  position: relative;
  width: 100%;
  height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5rem;
  background: radial-gradient(ellipse 50% 50% at top center, hsla(var(--background-yellow), 0.25), hsla(var(--background), 0)),
              radial-gradient(circle 300px at 25% 50%, hsla(var(--background-blue), 0.25), hsla(var(--background), 0));
}

body::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: hsl(var(--background));
  filter: url(#grainy);
}

.hero-content {
  display: flex;
  justify-content: center;
  gap: 7rem;
}

#hero-img {
  max-width: 300px;
  border: 5px solid white;
  border-radius: 10px;
}

.intro-container {
  display: flex;
  width: 35%;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.greeting {
  font-size: 1.3rem;
  font-weight: 600;
  color: hsl(var(--text-secondary));
}

.name {
  font-size: 3.5rem;
  font-weight: 800;
  color: hsl(var(--text-primary));
  margin-bottom: -0.4rem;
}

.job-title {
  font-size: 2.2rem;
  font-weight: 700;
  color: hsl(var(--text));
}

.description {
  margin-top: 0.6rem;
  font-size: 1.125rem;
  font-weight: 500;
}

.see-my-work {
  margin-top: 1.5rem;
  text-decoration: none;
  color: hsl(var(--accent));
  font-size: 1.125rem;
  font-weight: 600;
  border: 1px solid hsl(var(--accent));
  border-radius: 10px;
  padding: 0.5rem 1.2rem;
  box-shadow: 0 2px 2px hsla(var(--accent), .30),
              0 4px 4px hsla(var(--accent), .15),
              0 8px 8px hsla(var(--accent), .05)
              ;
}

.logo, .resume-link, .mailto-link, .social-media-links {
  position: absolute;
  color: hsl(var(--text-primary));
}

.logo {
  top: var(--section-padding);
  left: var(--section-padding);
  font-size: 2rem;
  font-weight: 800;
}

.resume-link {
  top: var(--section-padding);
  right: var(--section-padding);
  text-decoration: none;
  font-weight: 600;
  border: 1px solid hsl(var(--text-primary));
  border-radius: 10px;
  padding: 0.5rem;
  box-shadow: 0 2px 4px hsla(var(--text-primary), .30);
}

.mailto-link {
  bottom: var(--section-padding);
  left: var(--section-padding);
  writing-mode: sideways-lr;
  text-decoration: none;
  letter-spacing: 2px;
  font-size: 0.8rem;
}

.mailto-link:hover {
  text-decoration: underline;
  text-underline-offset: 4px;
}

.social-media-links {
  bottom: var(--section-padding);
  right: var(--section-padding);
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
}

.socials-link {
  color: hsl(var(--text-primary));
  display: grid;
  align-content: center;
}

.socials-link svg {
  width: 1.5rem;
  aspect-ratio: 1;
}

#about {
  position: relative;
  padding: 2rem;
  min-height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8%;
}

#about::before {
  content: '';
  position: absolute;
  z-index: -1;
  right: 0;
  background: red;
  transform: translateX(5%) rotate(-25deg);
  background: radial-gradient(hsla(var(--background-blue), 0.3), hsla(var(--background), 0) 60%);
  width: 80%;
  height: 60%;
}

#about .section-description {
  text-align: left;
}

.about-text {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  max-width: 60ch;
}

#about img {
  width: 300px;
  aspect-ratio: 3/4;
  object-fit: cover;
  border: 5px solid white;
  border-radius: 10px;
  box-shadow: var(--card-shadow);
}

#projects {
  min-height: 100dvh;
  padding: var(--section-padding);
  display: grid;
  justify-content: center;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: min-content;
  max-width: 1600px;
  padding: 2rem;
  column-gap: min(5%, 10rem);
  row-gap: 4rem;
}

.projects-intro-container {
  grid-column: 1 / span 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  gap: 0.5rem;
}

#projects .card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: min-content;
  gap: 0.5rem;
}

#projects .card .styled-border, #projects .card .project-description {
  grid-column: 1 / span 2;
}

#projects .styled-border {
  position: relative;
  aspect-ratio: 16/9;
  border-radius: 5px;
  padding: 1px;
  margin-bottom: 1.5rem;
  background: radial-gradient(ellipse 40% 50% at top center, hsl(var(--card-border-highlight)), hsl(var(--card-border)));
  box-shadow: var(--card-shadow);
}

.styled-border .screenshot {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: hsl(var(--card-border));
}

.styled-border .more-info {
  position: absolute;
  inset: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.project-links {
  display: flex;
  gap: 0.6rem;
  justify-content: end;
}

.project-links a {
  color: hsl(var(--text));
}

.project-links svg {
  width: 2rem;
  aspect-ratio: 1;
}

footer {
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: var(--section-padding);
}

.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  gap: 1rem;
}

.contact .details {
  padding: 1rem;
  font-size: 1.2rem;
  display: flex;
  align-items: center;
}

.details > div {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}


.details svg {
  width: 2rem;
  aspect-ratio: 1;
}

.send-a-message {
  text-decoration: none;
  padding: 1rem;
  border: 1px solid hsl(var(--primary));
  border-radius: 5px;
  color: hsl(var(--primary));
  font-size: 1.2rem;
  display: flex;
  gap: 1rem;
  align-items: center;
  box-shadow: 0 2px 2px hsla(var(--primary), .30),
              0 4px 4px hsla(var(--primary), .15),
              0 8px 8px hsla(var(--primary), .05)
              ;
}

.send-a-message svg {
  width: 2rem;
}

.socials-and-credits {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

footer .social-media-links {
  position: initial;
  flex-direction: row;
}

